creusot/tests/should_fail/inexhaustive_match.rs
fn inexhaustive_match(x: Option<()>) {
    match x {
        None => (),
    }
}
